# ntl_utils

./: CMakeLists.txt
include/: utils.h
src/: utils.cpp
test/: test.cpp
